# parallel-computing

./: .gitignore  README.md  flake.nix
01-mpi-introduction/: CMakeLists.txt  Makefile  hello.c  hello.cpp  reduce.c  reduce.cpp  roundroundround.c  roundroundround.cpp
02-parallel-sort/: CMakeLists.txt  run.sh  sort.cpp
02-parallel-sort/.cache/clangd/index/: sort.cpp.E2C924D79410B76F.idx
03-transport-equation/: CMakeLists.txt  README.md  grid.hpp  main.cpp  transport_equation.hpp  transport_equation_solver.hpp  transport_solver.cpp
03-transport-equation/.cache/clangd/index/: main.cpp.9CFD0581B9629ECE.idx
03-transport-equation/scripts/: gnuplot.sh  meausure.sh  plot.sh
04-integral/: CMakeLists.txt  main.cpp
05-openmp-introduction/: CMakeLists.txt  hello.cpp  reduce.cpp  shared.cpp
06-loop-parallelization/: CMakeLists.txt  main.cpp  measure.sh  mpi-main.cpp  omp-main.cpp
cmake/: functions.cmake
